[bumpversion]
current_version = 1.0.70
commit = True
tag = True

[metadata]
name = lgblkb-tools
author = Dias Bakhtiyarov
author-email = dbakhtiyarov@nu.edu.kz
summary = Tools to make life easier
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
license = BSD
keywords = 
	setup
	distutils

[files]
packages = 
	lgblkb_tools

[options.extras_require]
geojsonio = geojsonio

